Fixed alignment issues of project icons

--- a/assets/css/code/code_project.css
+++ b/assets/css/code/code_project.css
@@ -40,9 +40,9 @@ a {
   background-color: #917272;
   color: white;
   float: right;
-  font-size: 1.3rem;
-  padding: 0.5rem 0.8rem;
-  margin-top: -1.5rem;
+  font-size: 1em;
+  padding: 0.3em 0.7em;
+  margin-top: -1.5em;
   text-decoration: none;
   transition: background-color 0.3s ease-in-out;
 }
@@ -64,14 +64,14 @@ a {
 .description {
   background-color: white;
   position: relative;
-  font-size: 1.5rem;
+  font-size: 1.2em;
   width: 100%;
   height: 100%;
-  padding: 3rem;
+  padding: 3em;
   flex: 1;
   text-align: justify;
   opacity: 0;
-  box-shadow: 0.2rem 0rem 50px rgb(119, 119, 119);
+  box-shadow: 0.2em 0em 50px rgb(119, 119, 119);
   z-index: 1;
 
   animation: slide-right 0.9s ease-in-out 0.1s both;
@@ -88,8 +88,8 @@ a {
 }
 
 .project-title {
-  font-size: 2.5rem;
-  margin-bottom: 2rem;
+  font-size: 2.5em;
+  margin-bottom: 0.5em;
 }
 
 .pictures {
@@ -118,14 +118,14 @@ a {
 
 .visit {
   color: #917272;
-  margin-top: 6rem;
+  margin-top: 6em;
 
   float: right;
-  font-size: 1.3rem;
+  font-size: 1.1em;
 }
 
 .visit i {
-  margin-left: 0.5rem;
+  margin-left: 0.5em;
 }
 
 .visit:hover i {
